--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ credentials.py
 credentials.json
 token.pickle
 @google_tokens/
+@google_tokens/**
+**/google_tokens/
 student-hub-28ea1-firebase-adminsdk-x3tg5-8e4d21f2be.json
 *firebase-adminsdk*.json
 
