--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,41 @@
-# Environment variables
-.env
+# # Environment variables
+# .env
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-credentials.py
+# # Python
+# __pycache__/
+# *.py[cod]
+# *$py.class
+# *.so
+# .Python
+# build/
+# develop-eggs/
+# dist/
+# downloads/
+# eggs/
+# .eggs/
+# lib/
+# lib64/
+# parts/
+# sdist/
+# var/
+# wheels/
+# *.egg-info/
+# .installed.cfg
+# *.egg
+# credentials.py
 
-# Google credentials
-credentials.json
-token.pickle
-@google_tokens
-@google_tokens/
-@google_tokens/**
-**/google_tokens/
-student-hub-28ea1-firebase-adminsdk-x3tg5-8e4d21f2be.json
-*firebase-adminsdk*.json
+# # Google credentials
+# credentials.json
+# token.pickle
+# @google_tokens
+# @google_tokens/
+# @google_tokens/**
+# **/google_tokens/
+# student-hub-28ea1-firebase-adminsdk-x3tg5-8e4d21f2be.json
+# *firebase-adminsdk*.json
 
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo .DS_Store
+# # IDE specific files
+# .idea/
+# .vscode/
+# *.swp
+# *.swo .DS_Store
