fix: clean up requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ google-generativeai
 SpeechRecognition
 canvasapi
 python-dotenv
-flask-wtf
-flask-caching
+Flask-WTF
+Flask-Caching
 flask-mail
 Pillow
 requests
