--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-flask
-gunicorn
-numpy
-pandas
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-google-generativeai
-SpeechRecognition
-canvasapi
-python-dotenv
-flask-WTF
-flask-Caching
-flask-mail
-Pillow
-requests
-firebase-admin
-pathlib
+flask==3.0.0
+gunicorn==21.2.0
+numpy==1.24.3
+pandas==2.0.3
+google-api-python-client==2.108.0
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
+google-generativeai==0.3.1
+SpeechRecognition==3.10.0
+canvasapi==3.2.0
+python-dotenv==1.0.0
+flask-WTF==1.2.1
+flask-Caching==2.1.0
+flask-mail==0.9.1
+Pillow==10.1.0
+requests==2.31.0
+firebase-admin==6.2.0
