--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,15 @@
     "builds": [
       {
         "src": "app.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "includeFiles": [
+            "Services/**",
+            "static/images/*.jpg",
+            "static/images/*.png"
+          ]
+        }
       }
     ],
     "routes": [
