--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.3.3
 gunicorn==21.2.0
-pandas-lite==1.0.0
+pandas==1.5.3
 google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
@@ -10,6 +10,6 @@ python-dotenv==1.0.0
 flask-WTF==1.1.1
 flask-Caching==2.0.2
 flask-mail==0.9.1
-pillow-simd==9.0.0
+Pillow==9.5.0
 requests==2.31.0
 firebase-admin==6.2.0
