--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.3.3
 werkzeug==2.3.7
 gunicorn==21.2.0
+numpy==1.24.3
 pandas==1.5.3
 google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
@@ -14,3 +15,5 @@ flask-mail==0.9.1
 Pillow==9.5.0
 requests==2.31.0
 firebase-admin==6.2.0
+beautifulsoup4==4.12.2
+SpeechRecognition==3.10.0
