--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pandas==1.5.3
 google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
+google-auth==2.23.0
 google-generativeai==0.3.1
 canvasapi==3.2.0
 python-dotenv==1.0.0
@@ -17,3 +18,4 @@ requests==2.31.0
 firebase-admin==6.2.0
 beautifulsoup4==4.12.2
 SpeechRecognition==3.10.0
+oauthlib==3.2.2
